add vacancy major

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -789,7 +789,7 @@ ul.thumbnails.image_picker_selector li .thumbnail {
     color: #ffffff; 
     border-radius: 5px;
     min-width: 50px!important;
-    margin-top: 10px!important;
+    /* margin-top: 10px!important; */
 }
 
 .btn-min:hover,
