--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,18 @@
+.text-title{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    /* line-height: 130%; */
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #050401;
+    margin-left: 36px;
+    margin-bottom: 20px;
+}
+
 .img-detail{
     width: 100% !important;
     height: auto;
@@ -847,7 +862,7 @@ ul.thumbnails.image_picker_selector li .thumbnail {
   border-color: #e5e5e5; 
 }
 .bg-logo {
-    background-color: #FE0000!important;
+    background-color: #E6F5EC!important;
 }
 .btn-danger{
     background: #EF4A3C;
@@ -942,7 +957,18 @@ ul.thumbnails.image_picker_selector li .thumbnail {
 }
 
 .font-color-sidebar{
-    color:#fcfcfc;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    /* or 18px */
+
+    display: flex;
+    align-items: center;
+
+    /* Gray 1 */
+
+    color: #333333;
 }
 
 .right-icon-sidebar{
@@ -2104,11 +2130,9 @@ and (max-device-width: 767px)  {
         height: 50px;
     }
     .main-sidebar ul li .active {
-        border-left: 4px solid #299643;
-        padding: 12px 5px 12px 16px;
-        color: #006677;
-        background: #FE0000;
-        height: 50px!important;
+        background: #DF0E2C;
+        opacity: 0.15;
+        border-radius: 8px;
     }
     .custom-width {
         width: 260px!important;
