--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,34 @@
+.btn-red{
+    background: #DF0E2C;
+    border-radius: 8px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    width: auto;
+    height: 45px;
+}
+
+.btn-red:hover{
+    color: #FFFFFF;
+}
+
+.note-editor.note-frame .note-editing-area .note-editable{
+    background: #E8F7EE !important;
+}
+
+.title-page{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #050401;
+}
+
 .text-title{
     font-family: Inter;
     font-style: normal;
@@ -10,7 +41,11 @@
     text-transform: uppercase;
     color: #050401;
     margin-left: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.title-bottom{
+    margin-top: 20px;
 }
 
 .img-detail{
@@ -308,7 +343,8 @@
     height: 45px;
 }
 .select2-container--default .select2-selection--single {
-    border: 1px solid #aaa!important;
+    background: #E8F7EE;
+    border-radius: 4px;
     height: calc(1.5em + .75rem + 2px);
     display: flex;
     align-items: center;
