--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,7 +1,7 @@
 .btn-red{
     background: #DF0E2C;
     border-radius: 8px;
-    font-family: Inter;
+    /* font-family: Inter; */
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -30,7 +30,7 @@
 }
 
 .title-page{
-    font-family: Inter;
+    /* font-family: Inter; */
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -40,7 +40,7 @@
 }
 
 .text-title{
-    font-family: Inter;
+    /* font-family: Inter; */
     font-style: normal;
     font-weight: 600;
     font-size: 10px;
@@ -70,7 +70,7 @@
 }
 
 .navbar-title p{
-    font-family: Inter;
+    /* font-family: Inter; */
     font-style: normal;
     font-weight: normal;
     font-size: 17px;
@@ -1022,7 +1022,7 @@ ul.thumbnails.image_picker_selector li .thumbnail {
 }
 
 .font-color-sidebar{
-    font-family: Inter;
+    /* font-family: Inter; */
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
