--- a/resources/assets/css/candidate-style.css
+++ b/resources/assets/css/candidate-style.css
@@ -695,6 +695,84 @@ body {
     cursor: pointer;
 }
 
+.tabs-news .nav-link {
+    padding: 0px 0px .5rem 0px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #BDBDBD;
+    border-radius: 0px;
+}
+.tabs-news .nav-link.active {
+    background-color: #fff;
+    color: #050401;
+    border-bottom: 4px solid #DF0E2C;
+}
+
+.card-list-news {
+    background: #FFFFFF;
+    border: 1px solid #E0E0E0;
+    border-radius: 10px;
+    margin-bottom: 2.6rem;
+}
+
+.img-news{
+    width: 373.77px;
+    height: 218px;
+    border-radius: 10px;
+}
+
+.badge-news {
+    background: rgba(232, 247, 238, 0.5);
+    border: 2px solid #333333;
+    box-sizing: border-box;
+    border-radius: 13.5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #333333;
+    padding: 2px 6px;
+    width: fit-content;
+}
+
+.p-title-news{
+    margin-bottom: 0px;
+    margin-left: 15px;
+    margin-top: 4px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #828282;
+}
+
+.div-right-news{
+    margin-left: 15px;
+}
+
+.news-page-title{
+    font-family: 'inter_bold', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #050401;
+}
+
+.news-page-content{
+    font-family: 'inter_bold', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+}
 
 .margin-top-6rem {
     margin-top: 6rem;
