--- a/resources/assets/css/homepage-style.css
+++ b/resources/assets/css/homepage-style.css
@@ -179,6 +179,18 @@ background-color: #ccc;
     padding: 2.1rem 1.8rem;
 }
 
+.modal-for-notif {
+    max-width: 340px;
+}
+.modal-for-notif .modal-content {
+    background: #FFFFFF;
+    box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.modal-for-notif .modal-content .modal-body {
+    padding: 2.1rem 1.8rem;
+}
+
 footer {
     padding: 4rem 0px;
 }
@@ -239,4 +251,388 @@ ul.location-list li p {
     line-height: 15px;
     letter-spacing: -0.01em;
     color: #BDBDBD;
+}
+
+
+.profile-access {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.profile-access .img-profile {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+.profile-access .name-profile {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #050401;
+    margin-bottom: 0px;
+    margin-left: 10px;
+
+    width: 90px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.profile-access i {
+    margin-left: 10px;
+    color: #BDBDBD;
+    font-size: 20px;
+}
+.profile-dropdown .dropdown-menu {
+    background: #FFFFFF;
+    border: 0.2px solid #E0E0E0;
+    box-sizing: border-box;
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 0px;
+    min-width: 212px;
+    /* overflow: hidden; */
+    top: 110%;
+    left: -12px;
+    margin: 1rem 0 0;
+}
+.profile-dropdown .dropdown-menu:before {
+    content: "";
+    border-bottom: 13.2px solid #E0E0E0;
+    border-right: 10.2px solid transparent;
+    border-left: 10.2px solid transparent;
+    position: absolute;
+    top: -13px;
+    left: 18px;
+    z-index: 1001;
+}
+.profile-dropdown .dropdown-menu:after {
+    content: "";
+    border-bottom: 13px solid #fff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    position: absolute;
+    top: -12.1px;
+    left: 18px;
+    z-index: 1002;
+}
+.profile-dropdown .dropdown-item {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #333333;
+    text-decoration: none;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+}
+.profile-dropdown .dropdown-item img {
+    margin-right: 7px;
+}
+.profile-dropdown h6.dropdown-item {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #050401;
+    margin-bottom: 0.4rem;
+    margin-top: 0.4rem;
+}
+.profile-dropdown h6.dropdown-item:hover {
+    background-color: #FFFFFF;
+}
+.profile-dropdown h6.dropdown-item:active {
+    background-color: #FFFFFF;
+}
+.profile-dropdown .dropdown-item:active {
+    background-color: #DF0E2C;
+}
+.profile-dropdown .dropdown-item.signout:hover {
+    background-color: transparent;
+}
+.profile-dropdown .dropdown-item.signout:active {
+    background-color: transparent;
+}
+.profile-dropdown .dropdown-divider {
+    margin: 0px;
+    border-top: 1px solid #BDBDBD;
+}
+
+.notif-dropdown.dropdown {
+    margin-right: 2rem;
+}
+.notif-dropdown .notif-access {
+    cursor: pointer;
+}
+.notif-dropdown .notif-count {
+    position: absolute;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 9px;
+    line-height: 12px;
+    color: #E8F7EE;
+    background: #DF0E2C;
+    border: 2px solid #FFFFFF;
+    border-radius: 20px;
+    padding: 1px 3px;
+    right: -7px;
+    top: -6px;
+    height: 17px;
+}
+.notif-dropdown .dropdown-menu {
+    background: #FFFFFF;
+    border: 0.2px solid #E0E0E0;
+    box-sizing: border-box;
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 0px;
+    min-width: 300px;
+    /* overflow: hidden; */
+    top: 110%;
+    right: -14px;
+    margin: 1.15rem 0 0;
+}
+.notif-dropdown .dropdown-menu:before {
+    content: "";
+    border-bottom: 13.2px solid #E0E0E0;
+    border-right: 10.2px solid transparent;
+    border-left: 10.2px solid transparent;
+    position: absolute;
+    top: -13px;
+    right: 13.5px;
+    z-index: 1001;
+}
+.notif-dropdown .dropdown-menu:after {
+    content: "";
+    border-bottom: 13px solid #fff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    position: absolute;
+    top: -12.1px;
+    right: 13.3px;
+    z-index: 1002;
+}
+.notif-dropdown .dropdown-item .notif-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.notif-dropdown .dropdown-item .notif-header h6 {
+    margin-bottom: 0px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #050401;
+}
+.notif-dropdown .dropdown-item .notif-header h6 .notif-count-inside {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    color: #E8F7EE;
+    background: #DF0E2C;
+    border: 2px solid #FFFFFF;
+    border-radius: 20px;
+    padding: 1px 3px;
+}
+.notif-dropdown .dropdown-item .notif-header a {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #DF0E2C;
+    text-decoration: none;
+}
+.notif-dropdown .dropdown-item:first-child {
+    margin-bottom: 0.4rem;
+    margin-top: 0.4rem;
+}
+.notif-dropdown .dropdown-item:first-child:hover {
+    background-color: #FFFFFF;
+}
+.notif-dropdown .dropdown-item:first-child:active {
+    background-color: #FFFFFF;
+}
+.notif-dropdown .dropdown-item:active {
+    background-color: transparent;
+}
+.notif-dropdown .dropdown-divider {
+    margin: 0px;
+    border-top: 1px solid #BDBDBD;
+}
+.notif-dropdown .dropdown-item {
+    text-decoration: none;
+    padding: 1rem;
+}
+.notif-dropdown .dropdown-item .notif-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #333333;
+    margin-bottom: 0px;
+}
+.notif-dropdown .dropdown-item .notif-content {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 130%;
+    color: #828282;
+    margin: .3rem 0px;
+
+    max-width: 250px;
+    overflow: hidden;
+    white-space: normal;
+    text-overflow: ellipsis;
+}
+.notif-dropdown .dropdown-item .notif-detail {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: .5rem;
+}
+.notif-dropdown .dropdown-item .notif-detail .date-notif {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 130%;
+    color: #828282;
+    margin-bottom: 0px;
+}
+.notif-dropdown .dropdown-item .notif-detail .link-notif {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #DF0E2C;
+    text-decoration: none;
+}
+
+.card-job-list {
+    background: #FFFFFF;
+    border: 1px solid #E0E0E0;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+.job-list-detail .icon-wrapper {
+    width: 22px;
+    text-align: center;
+    display: table;
+}
+.job-list-detail p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    margin-bottom: 0px;
+    margin-left: .5rem;
+}
+.job-search-wrapper {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.job-search-wrapper p {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #DF0E2C;
+    margin-bottom: 0px;
+    margin-left: .5rem;
+}
+.job-search .dropdown-menu {
+    background: #FFFFFF;
+    border: 0.2px solid #E0E0E0;
+    box-sizing: border-box;
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 0px;
+    top: 15px !important;
+}
+.job-search .dropdown-menu:before {
+    content: "";
+    border-bottom: 13.2px solid #E0E0E0;
+    border-right: 10.2px solid transparent;
+    border-left: 10.2px solid transparent;
+    position: absolute;
+    top: -13px;
+    right: 13.5px;
+    z-index: 1001;
+}
+.job-search .dropdown-menu:after {
+    content: "";
+    border-bottom: 13px solid #fff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    position: absolute;
+    top: -12.1px;
+    right: 13.3px;
+    z-index: 1002;
+}
+.job-search .dropdown-menu.search {
+    min-width: 300px;
+}
+.job-search .dropdown-menu.search .submit-filter {
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #DF0E2C;
+    margin-left: .3rem;
+}
+.job-search .dropdown-menu.filter {
+    min-width: 300px;
+}
+.job-search .dropdown-menu .dropdown-item {
+    padding: 1rem;
+}
+.job-search .dropdown-menu .dropdown-divider {
+    margin: 0px;
+    border-top: 1px solid #BDBDBD;
+}
+.job-search .dropdown-menu .dropdown-item:hover {
+    background-color: transparent;
+}
+.job-search .dropdown-menu .dropdown-item:active {
+    background-color: transparent;
+}
+.job-search .dropdown-menu.filter .dropdown-item .clear-filter {
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 113.2%;
+    color: #828282;
+}
+.job-search .dropdown-menu.filter .dropdown-item .submit-filter {
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #DF0E2C;
+}
+.job-search .dropdown-menu h6 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #050401;
+}
+.job-search .dropdown-menu.filter .list-type-job {
+    display: flex;
+    align-items: center;
 }
