--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -85,9 +85,9 @@
     top: 0px !important;
 }
 
-.note-insert{
+/* .note-insert{
     display: none !important;
-}
+} */
 
 .dropzone-wrapper {
     position: relative;
