--- a/resources/assets/css/homepage-style.css
+++ b/resources/assets/css/homepage-style.css
@@ -190,6 +190,30 @@ background-color: #ccc;
 .modal-for-notif .modal-content .modal-body {
     padding: 2.1rem 1.8rem;
 }
+.modal-for-notif .modal-icon-notif .ilustrasi {
+    width: 65px;
+    height: 65px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgb(0 0 0 / 15%);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+.modal-for-notif .modal-content-notif p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #4F4F4F;
+}
+/* .modal-for-notif .modal-content-notif p a {
+    text-decoration: none;
+    font-weight: 700;
+    color: #4F4F4F;
+} */
 
 footer {
     padding: 4rem 0px;
@@ -523,12 +547,13 @@ ul.location-list li p {
     text-align: center;
     display: table;
 }
-.job-list-detail p {
+.job-list-detail .text {
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 130%;
     letter-spacing: -0.02em;
+    color: #828282;
     margin-bottom: 0px;
     margin-left: .5rem;
 }
@@ -635,4 +660,9 @@ ul.location-list li p {
 .job-search .dropdown-menu.filter .list-type-job {
     display: flex;
     align-items: center;
+}
+
+
+.job-type-select {
+    cursor: pointer;
 }
